--- a/src/components/awardscard.astro
+++ b/src/components/awardscard.astro
@@ -69,10 +69,10 @@ const formattedStartDate = formatter.format(parseDate(date));
     list-style-image: url('/images/bullet.svg');
   }
   .border-foreground {
-    border-color: #000;
+    border-color: #1f2937;
   }
   .bg-foreground {
-    background-color: #000;
+    background-color: #1f2937;
   }
   .left-\\[-7px\\] {
     left: -7px;
