--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,8 +19,9 @@ import { Icon } from "astro-icon/components";
             xmlns:xlink="https://www.w3.org/1999/xlink" 
             width="64px" 
             height="64px" 
+            fill="#1f2937"
             viewBox="0 0 800 800" 
-            class="fill-black">
+            >
             <g transform="translate(150, 0)">
               <path class="st0" d="M481.875,299.344L512,292.219l-4.656-19.641l-24.25,5.734c0-0.328,0.016-0.641,0.016-0.969
                   c0-38.078-10.531-72.781-28.969-102.359c15.438-53.938-13.438-124.547-13.438-124.547S387.813,73,357.719,100.297
