--- a/src/components/educationcard.astro
+++ b/src/components/educationcard.astro
@@ -83,10 +83,10 @@ const formattedEndDate = endDate ? formatter.format(parseDate(endDate)) : "Today
     list-style-image: url('/images/bullet.svg');
   }
   .border-foreground {
-    border-color: #000;
+    border-color: #1f2937;
   }
   .bg-foreground {
-    background-color: #000;
+    background-color: #1f2937;
   }
   .left-\\[-7px\\] {
     left: -7px;
