--- a/src/components/experiencecard.astro
+++ b/src/components/experiencecard.astro
@@ -58,7 +58,7 @@ const formattedEndDate = endDate ? formatter.format(parseDate(endDate)) : "Today
       }
     </ul>
   </div>
-  <svg class="absolute timeline-marker" xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 800 800" preserveAspectRatio="xMidYMid meet">
+  <svg class="absolute timeline-marker" fill="#1f2937" xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 800 800" preserveAspectRatio="xMidYMid meet">
     <g transform="translate(150, 0)">
       <path class="st0" d="M481.875,299.344L512,292.219l-4.656-19.641l-24.25,5.734c0-0.328,0.016-0.641,0.016-0.969
           c0-38.078-10.531-72.781-28.969-102.359c15.438-53.938-13.438-124.547-13.438-124.547S387.813,73,357.719,100.297
@@ -82,10 +82,10 @@ const formattedEndDate = endDate ? formatter.format(parseDate(endDate)) : "Today
     list-style-image: url('/images/bullet.svg');
   }
   .border-foreground {
-    border-color: #000;
+    border-color: #1f2937;
   }
   .bg-foreground {
-    background-color: #000;
+    background-color: #1f2937;
   }
   .left-\\[-7px\\] {
     left: -7px;
