--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,19 +1,84 @@
-<footer class="font-mplus my-20">
-  <p class="text-center text-sm text-slate-500">
-    Copyright © {new Date().getFullYear()} Inge Gatovsky. All rights reserved.
-  </p>
-  <!--
-    Can we ask you a favor 🙏
-    Please keep this backlink on your website if possible.
-    or Purchase a commercial license from https://web3templates.com
-  -->
-  <p class="text-center text-xs text-slate-500 mt-1">
-    Made with 😻 by <a
-      href="https://www.hharieta.lat"
-      target="_blank"
-      rel="noopener noreferrer"
-      class="hover:underline">
-      Inge Gatovsky
-    </a>
-  </p>
+---
+import { Icon } from 'astro-icon/components'
+import cv from '@cv'
+
+const socials = cv.basics.socials
+const resources = cv.Resources
+---
+
+<footer class="p-4 bg-white sm:p-6 dark:bg-gray-800">
+  <div class="pt-20 mx-auto max-w-screen-xl">
+      <div class="md:flex md:justify-between">
+          <div class="-ml-4 mb-6 md:mb-0">
+              <a href="https://www.hharieta.lat" class="flex items-center">
+                  <div class="flex h-40 content-start items-center">
+                    <div class="pt-6">
+                      <img src="/images/gatovsky.svg" loading="eager" class="mr-3 h-24" alt="Inge Gatovsky Logo" />
+                    </div>
+                    <span class="font-mplus self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Inge Gatovsky</span>
+                  </div>
+              </a>
+          </div>
+          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
+                  <ul class="text-gray-600 dark:text-gray-400">
+                    {
+                      resources.map((resource) => (
+                        <li class="mb-4">
+                          <a href={resource.url} target="_blank" rel="noopener">{resource.name}</a>
+                        </li>
+                      ))
+                    }
+                  </ul>
+              </div>
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow him</h2>
+                  <ul class="text-gray-600 dark:text-gray-400">
+                    {
+                      socials.map((social) => (
+                        <li class="mb-4">
+                          <a href={social.url} target="_blank" rel="noopener noreferrer" class="hover:underline">{social.network}</a>
+                        </li>
+                      ))
+                    }
+                  </ul>
+              </div>
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
+                  <ul class="text-gray-600 dark:text-gray-400">
+                      <li class="mb-4">
+                          <a href="https://www.termsfeed.com/live/ae84a1fa-082a-497e-866c-eafe987ceda8" target="_blank" rel="noopener noreferrer" class="hover:underline">Privacy Policy</a>
+                      </li>
+                      <li>
+                          <a href="https://www.termsfeed.com/live/faa5a705-fa34-4a65-ab87-9c81debb7791" target="_blank" rel="noopener noreferrer" class="hover:underline">Terms &amp; Conditions</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+      <div class="sm:flex sm:items-center sm:justify-between">
+          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://www.hharieta.lat" class="hover:underline">Inge Gatovsky™</a>. All Rights Reserved.
+          </span>
+          <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
+            {
+              socials.map((social) => (
+                <a
+                  href={social.url}
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
+                >
+                  <Icon name={social.name} class="w-6 h-6" />
+                </a>
+              ))
+            }
+              <!-- <a href="https://www.facebook.com/Cavaller.hector" target="_blank" rel="noopener" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                  <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg>
+              </a> -->
+             
+          </div>
+      </div>
+  </div>
 </footer>
