--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,11 +1,7 @@
----
-import Link from "./ui/link.astro";
----
-
 
 
 <div class="w-full h-96 content-center p-4 text-center bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-  <h5 class="mb-2  font-mplus text-3xl font-bold text-slate-800 dark:text-white">Connect with Inge Gatovksy</h5>
+  <h5 class="mb-2  font-mplus text-3xl font-bold text-slate-800 dark:text-white">Connect with Inge Gatovsky</h5>
   <p class="mb-5 text-base text-gray-500 sm:text-lg dark:text-slate-400">Explore his projects, collaborate with him and follow his career path.</p>
   <div class="items-center justify-center space-y-4 sm:flex sm:space-y-0 sm:space-x-4 rtl:space-x-reverse">
         <a href="https://github.com/hharieta" target="_blank" rel="noopener noreferrer" class="w-full sm:w-auto bg-gray-800 hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-300 text-white rounded-lg inline-flex items-center justify-center px-4 py-2.5 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700">
@@ -30,7 +26,6 @@ import Link from "./ui/link.astro";
           </div>
       </a>
         <a href="https://www.linkedin.com/in/hharieta/" target="_blank" rel="noopener noreferrer" class="w-full md:w-max sm:w-auto bg-gray-800 hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-300 text-white rounded-lg inline-flex items-center justify-center px-4 py-2.5 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700">
-          <!-- <svg class="me-3 w-7 h-7" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google-play" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M325.3 234.3L104.6 13l280.8 161.2-60.1 60.1zM47 0C34 6.8 25.3 19.2 25.3 35.3v441.3c0 16.1 8.7 28.5 21.7 35.3l256.6-256L47 0zm425.2 225.6l-58.9-34.1-65.7 64.5 65.7 64.5 60.1-34.1c18-14.3 18-46.5-1.2-60.8zM104.6 499l280.8-161.2-60.1-60.1L104.6 499z"></path></svg> -->
           <svg class="me-3 w-7 h-7" fill="currentColor" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin" role="img" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 256"><path d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.907 39.907 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186l-.016 67.013ZM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009-.002-12.157 9.851-22.014 22.008-22.016 12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97v122.16ZM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453"/></svg>
 
           <div class="text-left rtl:text-right">
@@ -40,35 +35,3 @@ import Link from "./ui/link.astro";
       </a>
   </div>
 </div>
-
-
-<!-- <div
-  class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
-  <h2 class="text-white text-4xl md:text-6xl tracking-tight">
-    Your friendly neighborhood Gatovsky is here to help.
-  </h2>
-  <div>
-    <svg 
-      version="1.1" 
-      id="_x32_" 
-      xmlns="https://www.w3.org/2000/svg" 
-      xmlns:xlink="https://www.w3.org/1999/xlink" 
-      width="128px" 
-      height="128px" 
-      viewBox="0 0 800 800" 
-      class="fill-white">
-      <g transform="translate(150, 0)">
-        <path class="st0" d="M481.875,299.344L512,292.219l-4.656-19.641l-24.25,5.734c0-0.328,0.016-0.641,0.016-0.969
-            c0-38.078-10.531-72.781-28.969-102.359c15.438-53.938-13.438-124.547-13.438-124.547S387.813,73,357.719,100.297
-            C327.109,91.063,292.578,88.094,256,88.094c-36.766,0-71.484,2.563-102.203,11.781c-30.156-27.109-82.5-49.438-82.5-49.438
-            S42.406,121.063,57.859,175c-18.422,29.578-28.984,64.281-28.984,102.344c0,0.328,0.031,0.641,0.031,0.969l-24.25-5.734L0,292.219
-            l30.109,7.125c2.672,23.578,9.672,44.75,20.234,63.422L12.875,377.75l7.484,18.75l41.203-16.484
-            c39.797,53.141,111.969,81.547,194.438,81.547c82.453,0,154.641-28.406,194.438-81.547l41.203,16.484l7.484-18.75l-37.469-14.984
-            C472.219,344.094,479.219,322.922,481.875,299.344z"/>
-      </g>
-    </svg>
-  </div>
-  <div class="flex">
-    <Link href="/contact" style="inverted">Contact</Link>
-  </div>
-</div> -->
