--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -77,7 +77,7 @@ const { courses } = basics;
       <GridCourse {...course} />
     ))}
   </div>
-  <div class="mt-6 flex flex-col sm:flex-row gap-3">
+  <div class="mt-6 flex justify-center md:flex-row  items-center content-center  gap-3">
     <Link
       href="mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#111;&#64;&#104;&#104;&#97;&#114;&#105;&#101;&#116;&#97;&#46;&#108;&#97;&#116;"
       target="_blank"
