--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -12,7 +12,7 @@ const resources = cv.Resources
     <div class="md:flex md:justify-between">
       <div class="-ml-4 mb-6 md:mb-0">
         <a href="https://www.hharieta.lat" class="flex items-center">
-          <div class="flex h-40 content-start items-center">
+          <div class="flex h-40 mt-0 md:-mt-12 content-start items-center">
             <div class="pt-6">
               <Image
                 src="/images/gatovsky.svg"
@@ -116,6 +116,7 @@ const resources = cv.Resources
           href="{social.url}"
           target="_blank"
           rel="noopener noreferrer"
+          aria-label={social.label}
           class="text-gray-500 hover:text-slate-900 dark:hover:text-white"
         >
           <Icon name={social.name} class="w-6 h-6" />
