fixed touch items gallery

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -126,7 +126,7 @@ const resources = cv.Resources
       <span class="text-sm text-slate-500 sm:text-center dark:text-slate-400"
         >© 2024
         <a href="https://www.hharieta.lat" class="hover:underline"
-          >Inge Gatovsky™</a>. All Rights Reserved.
+          >Inge Gatovsky™</a> loves cheap poems.
       </span>
     </div>
   </div>
