--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -133,7 +133,7 @@ import { Image } from "astro:assets";
         <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
         <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
         <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
-        <button type="button" class="w-4 h-4 rounded-full" aria-current="true" aria-label="Slide 6" data-carousel-slide-to="5"></button>
+        <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 6" data-carousel-slide-to="5"></button>
         <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 7" data-carousel-slide-to="6"></button>
         <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 8" data-carousel-slide-to="7"></button>
         <button type="button" class="w-4 h-4 rounded-full" aria-current="false" aria-label="Slide 9" data-carousel-slide-to="8"></button>
@@ -142,7 +142,7 @@ import { Image } from "astro:assets";
     <!-- Slider controls -->
     <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
         <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <svg class="w-5 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
             </svg>
             <span class="sr-only">Previous</span>
