--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const makeTitle = title
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="Personal Blog"
+      description="Career Path"
       canonical={canonicalURL}
       twitter={{
         creator: "@inge.gatovsky",
