--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -3,6 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import cv from "@cv";
 import {formatDate} from "@utils/dateFormatter";
+import Link from "@components/ui/link.astro";
 
 const { slug } = Astro.params;
 const project = cv.projects.find((proj) => proj.name.toLowerCase().replace(/\s+/g, '-') === slug);
@@ -75,18 +76,18 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                   project.demo ? (
                     /^(http|https):\/\/[^\s$.?#].[^\s]*$/.test(project.demo) ? (
                       <div>
-                      <a href={project.demo} target="_blank" rel="noopener noreferrer" class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 hover:text-blue-400">
-                        {project.demo}
+                      <a href={project.demo} target="_blank" rel="noopener noreferrer" class="transition bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 hover:text-blue-300 hover:bg-blue-800 hover:-translate-y-1 hover:scale-110">
+                        Click here to view 
                       </a>
                     </div>
                     ) : (
                       <div>
-                        <span class=" bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
+                        <span class=" bg-gray-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
                       </div>
                     )
                   ) : (
                     <div>
-                      <span class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
+                      <span class="bg-gray-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
                     </div>
                   )
                 }
@@ -99,14 +100,14 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
                   {
                     project.source ? (
                       /^(http|https):\/\/[^\s$.?#].[^\s]*$/.test(project.source) ? (
-                        <a href={project.source} target="_blank" rel="noopener noreferrer" class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 hover:text-blue-300 hover:bg-blue-800">
-                          {project.name}
+                        <a href={project.source} target="_blank" rel="noopener norreferer" class="transition bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5 hover:text-blue-300 hover:bg-blue-800 hover:-translate-y-1 hover:scale-110">
+                          View on GitHub
                         </a>
                       ) : (
-                        <span class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
+                        <span class="bg-gray-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
                       )
                     ) : (
-                      <span class="bg-blue-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
+                      <span class="bg-gray-200 text-blue-800 border border-blue-300 rounded-md px-1.5 py-0.5">Not available</span>
                     )
                   }
                 </div>
@@ -114,15 +115,16 @@ const date = formatDate(project.date, "year"); // year, year-month, year-month-d
             </ul>
         </div>
       </div>
-      <div id="custom-controls-gallery" class="relative w-full lg:w-3/5 pl-0 pt-20" data-carousel="slide">
+      <!-- Carousel -->
+      <div id="custom-controls-gallery" class="lex flex-col relative items-center justify-center content-center py-10 w-full lg:w-3/4 mx-auto" data-carousel="slide">
         <!-- Carousel wrapper -->
-        <div class="relative h-56 overflow-hidden rounded-lg md:h-96 py-20">
+        <div class="relative h-64 overflow-hidden rounded-lg md:rounded-xl md:h-96 lg:h-[38rem] lg:rounded-2xl mx-auto">
           {
             project.images.map((image) =>(
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
               <img
                 src={image}
-                class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                 loading="eager"
                 alt={project.name}
               />
