--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -22,75 +22,75 @@ import { Image } from "astro:assets";
 
 
 
-<section class="py-10">
+<section class="flex flex-col relative items-center justify-center content-center py-10 w-full lg:w-3/4 mx-auto">
   <div id="default-carousel" class="relative w-full" data-carousel="slide">
     <!-- Carousel wrapper -->
-    <div class="relative h-64 overflow-hidden rounded-lg md:rounded-xl md:h-96 lg:h-[38rem] lg:rounded-2xl">
-        <!-- Item 1 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <Image 
-            src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/C88EA7F7-5541-41A8-9F43-A6D1AD5C7459_1_105_c.webp?v=1722147033911" 
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
-            loading="eager"
-            width={500}
-            height={500}
-            alt="fav-1">
-        </div>
-        <!-- Item 2 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <Image
-              src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/cachedImage.webp?v=1722094134963" 
-              class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
-              loading="eager"
-              width={500}
-              height={500}
-              alt="fav-5"/>
-        </div>
-        <!-- Item 3 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <Image 
-            src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/cachedImage%202.webp?v=1722094134557" 
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
-            loading="eager"
-            width={500}
-            height={500}
-            alt="fav-6">
-        </div>
-        <!-- Item 4 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <Image
-            src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_3603.webp?v=1722094136230" 
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
-            loading="eager"
-            width={500}
-            height={500}
-            alt="fav-7">
+    <div class="relative h-64 overflow-hidden rounded-lg md:rounded-xl md:h-96 lg:h-[38rem] lg:rounded-2xl mx-auto">
+      <!-- Item 1 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+        <Image 
+          src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/C88EA7F7-5541-41A8-9F43-A6D1AD5C7459_1_105_c.webp?v=1722147033911" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          loading="eager"
+          width={500}
+          height={500}
+          alt="fav-1">
+      </div>
+      <!-- Item 2 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+        <Image
+          src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/cachedImage.webp?v=1722094134963" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          loading="eager"
+          width={500}
+          height={500}
+          alt="fav-5"/>
+      </div>
+      <!-- Item 3 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+        <Image 
+          src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/cachedImage%202.webp?v=1722094134557" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          loading="eager"
+          width={500}
+          height={500}
+          alt="fav-6">
+      </div>
+      <!-- Item 4 -->
+      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+        <Image
+          src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_3603.webp?v=1722094136230" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          loading="eager"
+          width={500}
+          height={500}
+          alt="fav-7">
       </div>
       <!-- Item 5 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <Image 
-            src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_5870.webp?v=1722094137695" 
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
-            loading="eager"
-            width={500}
-            height={500}
-            alt="fav-8">
+        <Image 
+          src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_5870.webp?v=1722094137695" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          loading="eager"
+          width={500}
+          height={500}
+          alt="fav-8">
       </div>
       <!-- Item 6 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <Image 
-            src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_6018.webp?v=1722094138406" 
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
-            loading="eager"
-            width={500}
-            height={500}
-            alt="fav-9">
+        <Image 
+          src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_6018.webp?v=1722094138406" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          loading="eager"
+          width={500}
+          height={500}
+          alt="fav-9">
       </div>
       <!-- Item 7 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
         <Image
           src="https://cdn.glitch.global/f8dc0126-7e62-42eb-b9b3-c1d569626a06/IMG_6104.webp?v=1722094140054" 
-          class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
+          class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" 
           loading="eager"
           width={500}
           height={500}
@@ -99,30 +99,31 @@ import { Image } from "astro:assets";
     </div>
     <!-- Slider indicators -->
     <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse">
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 6" data-carousel-slide-to="5"></button>
-        <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 7" data-carousel-slide-to="6"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 6" data-carousel-slide-to="5"></button>
+      <button type="button" class="w-6 h-6 rounded-full" aria-current="false" aria-label="Slide 7" data-carousel-slide-to="6"></button>
     </div>
     <!-- Slider controls -->
     <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-5 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-            </svg>
-            <span class="sr-only">Previous</span>
-        </span>
+      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+        <svg class="w-5 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+        </svg>
+        <span class="sr-only">Previous</span>
+      </span>
     </button>
     <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-            </svg>
-            <span class="sr-only">Next</span>
-        </span>
+      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+        <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+        </svg>
+        <span class="sr-only">Next</span>
+      </span>
     </button>
   </div>
 </section>
+
