--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -9,7 +9,7 @@ const menuitems = [
     children: [
       { title: "Projects", path: "/portfolio", target: "_self" },
       { title: "Curriculum Vitae", path: "/experience", target: "_self", badge: "UwU"},
-      { title: "Hobby", path: "/404", target: "_self"},
+      { title: "Blog", path: "https://blog.hharieta.lat", target: "_blank" },
       { title: "Social media", path: "/404", target: "_parent" },
     ],
     badge: "UwU"
@@ -23,6 +23,11 @@ const menuitems = [
     title: "Portfolio",
     path: "/portfolio",
     target: "_self"
+  },
+  {
+    title: "Blog",
+    path: "https://blog.hharieta.lat",
+    target: "_blank"
   },
   {
     title: "About",
